直播页自动横竖屏,

--- a/app/src/main/res/values-ja/strings.xml
+++ b/app/src/main/res/values-ja/strings.xml
@@ -122,6 +122,7 @@
   <string name="DEVICE_ADDING">バインティングされています。しばらくお待ちください&#8230;</string>
   <string name="DEVICE_BLUETOOTH_ONLINE">Bluetooth が接続しました</string>
   <string name="DEVICE_CONNECTING">デバイスがネットワークに接続中</string>
+  <string name="DEVICE_CONNECTING_WIFI">接続しています、お待ちください&#8230;</string>
   <string name="DEVICE_EXISTED">このアカウントはデバイスにバインディングされています</string>
   <string name="DEVICE_NO_RES">デバイスに反応がありません。リストに戻りご確認ください</string>
   <string name="DEVICE_OFFLINE1">デバイスの電源が入っているかどうかを確認してください</string>
@@ -174,6 +175,7 @@
   <string name="Delete_Share">共有を削除しますか？</string>
   <string name="Detection_Pop">シャットダウンは、もはや検出アラームメッセージを押すことはありません。</string>
   <string name="Device_Disconnected">接続が切断されました</string>
+  <string name="Dont_Show_Again">再度表示しない</string>
   <string name="Download_Then_Share">動画をダウンロードして共有してください</string>
   <string name="Downloading">ビデオがダウンロードされています</string>
   <string name="EDIT_IMAGE">画像編集</string>
@@ -210,7 +212,7 @@
   <string name="EMAIL_1">メールアドレス</string>
   <string name="EMAIL_2">有効なメールアドレスを入力してください</string>
   <string name="EMAIL_RESET_PWD">システムがメールを%sに送信しましたので、送信されたリンクをクリックしてパスワードの変更をしてください</string>
-  <string name="EMAIL_SIGNUP">E&#45;mail</string>
+  <string name="EMAIL_SIGNUP">E&#8211;mail</string>
   <string name="END_TALKBACK">通話終了～</string>
   <string name="ENTER_CODE">検証コード</string>
   <string name="ENTER_PWD">新しいパスワードを再度入力してください</string>
@@ -417,6 +419,7 @@
   <string name="PLEASE_WAIT_1">ログイン中、お待ちください&#8230;</string>
   <string name="PLEASE_WAIT_2">\nを追加中、約1分間かかりますので、しばらくお待ちください&#8230;</string>
   <string name="PROFILE_PHOTO">アイコン</string>
+  <string name="PROXY_INTERNET">プロキシインターネットを使用している場合は、プロキシを閉じてからバインドしてください</string>
   <string name="PULL_TO_LOAD">スワイプして読込</string>
   <string name="PULL_TO_REFRESH">スワイプして更新</string>
   <string name="PUSH_MSG">メッセージ受信通知を許可する</string>
@@ -595,6 +598,7 @@
   <string name="SURE_DELETE">すべてのメッセージを削除してもよろしいでしょうか？</string>
   <string name="SURE_DELETE_1">アカウントから\"%s\"および関連データを削除してもよろしいですか?</string>
   <string name="SWITCH_LOCATIONS">位置切替</string>
+  <string name="SWITCH_VIEW_POP">現在の正面図は、見通しの見通しに切り替えるかどうかにかかわらず、この機能をサポートしていませんか？</string>
   <string name="SYSTEM">システム通知</string>
   <string name="SYSTEM_MSG">システムメッセージ</string>
   <string name="SYSTME_VERSION">システムバージョン</string>
@@ -626,6 +630,7 @@
   <string name="Start_instructions_G">注意してください \"加菲狗官微服务\"公式アカウントは、メインページを入力し、サービスのメニューバーをクリックして、バインディングアカウントを選択します。</string>
   <string name="Start_instructions_H">アカウントをバインドする</string>
   <string name="Start_instructions_I">パスワードを忘れるなど、賢い犬の電話/メールアカウントを入力してください。賢い犬のクライアントに戻ってください。</string>
+  <string name="Switch_Mode">現在のネットワークの撮影コンテンツを直接モードに切り替えてください</string>
   <string name="Switch_Off">常にオフ</string>
   <string name="Switch_On">常にオン</string>
   <string name="TAKE_PHOTO">一枚写真を撮る</string>
@@ -821,7 +826,7 @@
   <string name="Tap1_Update">更新</string>
   <string name="Tap1_UpdateFirmwareTips">更新が間もなく開始されます。携帯電話と端末が同じWIFIに接続していることを確認してください</string>
   <string name="Tap1_Update_Electricity">バッテリ残量が30%以下ですので更新できません。充電してからリトライしてください。</string>
-  <string name="Tap1_Update_Precautions">アップデートの所要時間は約4&#45;5分です。完了するまでは電源やネットワーク接続を切らないでください。</string>
+  <string name="Tap1_Update_Precautions">アップデートの所要時間は約4&#8211;5分です。完了するまでは電源やネットワーク接続を切らないでください。</string>
   <string name="Tap1_device_deleted">デバイスを削除されました。</string>
   <string name="Tap1_iHome_Associate">関連</string>
   <string name="Tap1_iHome_Associated">関連する</string>
@@ -995,12 +1000,12 @@
   <string name="WIFI_PWD">パスワード</string>
   <string name="WIFI_PWD_1">パスワード：</string>
   <string name="WIFI_SET_2">1. デバイスのWiFiランプが青く点滅しているかどうかチェックしてください。点滅していない場合、点滅するまでWiFiキーを約3秒間長押ししてください\n2.iPhoneの設定> WiFiを開き、\"%s\"WiFiを選択し、追加してください,パスワード11111111</string>
-  <string name="WIFI_SET_3">システム設定&#45;>WiFiにDOG&#45;**&#45;******を選択し追加してください,パスワード11111111</string>
-  <string name="WIFI_SET_3_1">システム設定&#45;> WiFiにDOG&#45;ML &#45;******を選択し追加してください,パスワード11111111</string>
+  <string name="WIFI_SET_3">システム設定&#8211;>WiFiにDOG&#8211;**&#8211;******を選択し追加してください,パスワード11111111</string>
+  <string name="WIFI_SET_3_1">システム設定&#8211;> WiFiにDOG&#8211;ML &#8211;******を選択し追加してください,パスワード11111111</string>
   <string name="WIFI_SET_4">戻る%s</string>
   <string name="WIFI_SET_5GTIPS">注意：ただいま5GHz式のWiFi電波が適用されません</string>
-  <string name="WIFI_SET_RS">システム設定&#45;> WiFiにRS&#45;CAM &#45;******を選択し追加してください,パスワード11111111</string>
-  <string name="WIFI_SET_VER">システム設定&#45;> WiFiに %s を選択し追加してください,パスワード11111111</string>
+  <string name="WIFI_SET_RS">システム設定&#8211;> WiFiにRS&#8211;CAM &#8211;******を選択し追加してください,パスワード11111111</string>
+  <string name="WIFI_SET_VER">システム設定&#8211;> WiFiに %s を選択し追加してください,パスワード11111111</string>
   <string name="WONDER_TODAY_H_M">今日 HH:mm</string>
   <string name="WONDER_YESTERDAY_H_M">昨日 HH:mm</string>
   <string name="WeChat">WeChat</string>
@@ -1031,7 +1036,7 @@
   <string name="connecting_ap">獲得中&#8230;</string>
   <string name="contacts_auth">連絡帳</string>
   <string name="copy">复制</string>
-  <string name="copyrightEn">Copyright ©2005&#45;%s Cylan.All Rights Reserved.</string>
+  <string name="copyrightEn">Copyright ©2005&#8211;%s Cylan.All Rights Reserved.</string>
   <string name="device_Wi_Fi">WiFi</string>
   <string name="dialog_callto_info">%s\nは、電話番号であってもよいし、次のことができます：</string>
   <string name="doorbell_title">%1$s(%2$s)</string>
@@ -1054,7 +1059,7 @@
   <string name="please_choose_wifi">ネットワークの選択</string>
   <string name="receive_new_news">%s新しい情報の提示</string>
   <string name="rename">名前編集</string>
-  <string name="service_phonenum">+86 400&#45;716&#45;3232</string>
+  <string name="service_phonenum">+86 400&#8211;716&#8211;3232</string>
   <string name="set_failed">設定ができませんでした</string>
   <string name="setwifi_check">設定次に、\"%s\"のWiFiネットワークに接続してください</string>
   <string name="share_content">ニースアプリ、あなたも試してみることができます〜</string>
