--- a/app/src/main/res/values-zh-rCN/strings.xml
+++ b/app/src/main/res/values-zh-rCN/strings.xml
@@ -894,7 +894,7 @@
     <string name="Tap3_Friends_DeleteFriends">确定删除此好友?</string>
     <string name="Tap3_Friends_Details">详细资料</string>
     <string name="Tap3_Friends_Myaccount">我的账号</string>
-    <string name="Tap3_Friends_NoBindTips">使用亲友功能需要绑定手机/邮箱</string>
+    <string name="Tap3_Friends_NoBindTips">使用亲友功能需要绑定手机</string>
     <string name="Tap3_Friends_Share">分享设备给%s</string>
     <string name="Tap3_Friends_Tips">无论多远，挂念从未中断，添加亲友，彼此就在身边</string>
     <string name="Tap3_Friends_UserInfo">个人信息</string>
