功能：更新语言包

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -26,6 +26,7 @@
     <string name="ALERTS">Alert sounds</string>
     <string name="ALIAS">Nickname</string>
     <string name="ALLDAY">Allday</string>
+    <string name="ALLDAY_OPEN">Whole day open</string>
     <string name="ALTER">Alter</string>
     <string name="ANEW_SEND">Resend</string>
     <string name="AT_HOME">At home</string>
@@ -52,6 +53,7 @@
     <string name="Button_Sure">Sure</string>
     <string name="Button_Yes">Yes</string>
     <string name="CALL_CAMERA_NAME">Doorbell</string>
+    <string name="CALL_SUCCESS_OPEN_SAVE">After press the device call key, it will turn on or off energy saving mode</string>
     <string name="CAMERA">Camera</string>
     <string name="CANCEL">Cancel</string>
     <string name="CARRY_ON">Continue</string>
@@ -132,6 +134,7 @@
     <string name="DEVICE_OFFLINE5">Please configure WiFi for device</string>
     <string name="DEVICE_OFFLINE6">No WiFi available</string>
     <string name="DEVICE_OFFLINE7">Please connect equipment hot spots</string>
+    <string name="DEVICE_SHARE_LIMIT_TIPS">The number of share limit reached</string>
     <string name="DEVICE_UPGRADE">Device software update</string>
     <string name="DEVICE_UPGRADE_TIPS">The device needs to be rebound to update software.</string>
     <string name="DEVICE_WIFI_ONLINE">WiFi&#8211;Online</string>
@@ -154,7 +157,7 @@
     <string name="DOOR_CLEAR_ALL">Clear call records</string>
     <string name="DOOR_CLEAR_REOCRD">Clear call records</string>
     <string name="DOOR_COMFIRETOCLEAR">Can not be restored if deleted, please reconfirm.</string>
-    <string name="DOOR_CONNECT">Connection</string>
+    <string name="DOOR_CONNECT">Connect</string>
     <string name="DOOR_HINT_LAGEL">Red and blue flashing alternatively,\nsoftware is upgrading.</string>
     <string name="DOOR_LOWBETTERY">Low power, please charge</string>
     <string name="DOOR_LOW_BATTERY">Low power, please charge</string>
@@ -214,6 +217,14 @@
     <string name="EMAIL_RESET_PWD">Already emailed to %s, please click the link in the email to reset password</string>
     <string name="EMAIL_SIGNUP">E&#8211;mail</string>
     <string name="END_TALKBACK">Talkback finished</string>
+    <string name="ENERGY_SAVE_CALL">Press the call key</string>
+    <string name="ENERGY_SAVE_HELP">Help</string>
+    <string name="ENERGY_SAVE_MODE">Energy saving mode</string>
+    <string name="ENERGY_SAVE_MODE_Description">Can receive the doorbell message, but cannot view live, record, security features. If set to \"Open only at night\", only effective from 22:00 to 8:00.</string>
+    <string name="ENERGY_SAVE_MODE_ON">Energy saving mode is on</string>
+    <string name="ENERGY_SAVE_MODE_ON_OFF">In the energy saving mode, select on or off</string>
+    <string name="ENERGY_SAVE_MODE_POP">Press the device call key, or it will not take effect immediately.</string>
+    <string name="ENERGY_SAVE_NOTE">Note: That does not take effect</string>
     <string name="ENTER_CODE">Verification code</string>
     <string name="ENTER_PWD">Confirm New Password</string>
     <string name="ENTER_PWD_1">Enter password</string>
@@ -263,6 +274,10 @@
     <string name="H5_Panoramic">Panoramic</string>
     <string name="H5_VR_mode">VR mode</string>
     <string name="HOME">Home</string>
+    <string name="HOTSPOTS_CONNECT_TIMEOUT_TIPS">Can not connect to hotspots</string>
+    <string name="HOTSPOT_NAME">Hotspot: %s</string>
+    <string name="HOTSPOT_PASSWORD">Please enter the hotspot password</string>
+    <string name="HOTSPOT_PASSWORD_ERROR">Password must be at least 8 characters</string>
     <string name="HOUR">H</string>
     <string name="HOURS">24 hours</string>
     <string name="HZ_NTSC_PAL">Start NTSC</string>
@@ -303,7 +318,36 @@
     <string name="LIGTH_LABEL_1_2">Blue light, 3G/4G Online</string>
     <string name="LIGTH_LABEL_2_1">Blinking, Low battery</string>
     <string name="LIGTH_LABEL_2_2">Blue light, Powered</string>
+    <string name="LIVE_ACCOUNT">%s account</string>
+    <string name="LIVE_ACCOUNT_BIND_TIPS">Please bind an account first</string>
+    <string name="LIVE_ACCOUNT_UNBOUND">Unbound</string>
+    <string name="LIVE_ADDRESS_EXPIRED">Live address has expired</string>
+    <string name="LIVE_CHANNEL_CREATING_LOADING">Creating &#8230;</string>
+    <string name="LIVE_CREATE_BUTTON">Create live</string>
+    <string name="LIVE_CREATE_FAIL_TIPS">Create fail</string>
+    <string name="LIVE_CREATE_TIPS">Please create a live broadcast first</string>
+    <string name="LIVE_CREATING">Creating %s live &#8230;</string>
+    <string name="LIVE_CURRENT_TEXT">Current live</string>
     <string name="LIVE_DATA">Cellular network,Pls note data usage</string>
+    <string name="LIVE_DETAIL_ADD_END_TIME">Add end time</string>
+    <string name="LIVE_DETAIL_DEFAULT_CONTENT">I am using Livem720 ° panorama camera for live</string>
+    <string name="LIVE_DETAIL_DEL_END_TIME">Delete end time</string>
+    <string name="LIVE_DETAIL_DESCRIPTION">Live description</string>
+    <string name="LIVE_DETAIL_TITLE">Live title</string>
+    <string name="LIVE_FAILED">Due to address or network problems, live failed</string>
+    <string name="LIVE_LANMODE_POP">Do not support live, switch to \"Connect to WiFi\" or \"Hotspot\"?</string>
+    <string name="LIVE_NOT_OPENED_POP">YouTube account %s has not yet opened the channel, can not live, please open and try again</string>
+    <string name="LIVE_OPENING">Opening live &#8230;</string>
+    <string name="LIVE_PLATFORM_FACEBOOK">Facebook</string>
+    <string name="LIVE_PLATFORM_WEIBO">Sina Weibo</string>
+    <string name="LIVE_PLATFORM_YOUTUBE">YouTube</string>
+    <string name="LIVE_RTMP_HINT">rtmp://</string>
+    <string name="LIVE_SELECT_PLATFORM">Select a live platform</string>
+    <string name="LIVE_SLOW_CONNECTION">Slow connection, can not play live video, switch rate, or try again in a better network environment.</string>
+    <string name="LIVE_STOP_POP">After the stop, the live address will be invalid, whether to stop?</string>
+    <string name="LIVE_TESTING">Testing live web &#8230;</string>
+    <string name="LIVE_TIME_ERROR_TIPS">The start time must be earlier than the end time</string>
+    <string name="LIVE_UNBIND_ACCOUNT">Unbind %s account or not?</string>
     <string name="LOADING">Loading&#8230;</string>
     <string name="LOCAL_NOTIFICATION_AndroidMSG">Please go to Phone\'s \"Settings\"&#8211;\"Notifications\", find %s and open \'Notifications\'</string>
     <string name="LOCATION">Location:</string>
@@ -509,6 +553,10 @@
     <string name="RE_ADD_BUTTONG">Re&#8211;add</string>
     <string name="RE_ADD_LABEL">Update completed</string>
     <string name="RIGN_SUC">Registered Successfully</string>
+    <string name="RTMP_EMPTY_TIPS">Address can not be empty</string>
+    <string name="RTMP_ERROR_TIPS">Please fill in the correct address</string>
+    <string name="RTMP_SERVER_URL">Server URL:</string>
+    <string name="RTMP_STREAM_KEY">Stream Key:</string>
     <string name="Record_Descript">After opening, view real&#8211;time video can be recorded</string>
     <string name="Record_Operate">Can not operate while recording</string>
     <string name="Record_Video">Record</string>
@@ -558,6 +606,7 @@
     <string name="SETTING">Setting&#8230;</string>
     <string name="SETTINGS">Settings</string>
     <string name="SETTINGS_1">Settings</string>
+    <string name="SETTINGS_MOBILE_HOTSPOT">Mobile hotspot</string>
     <string name="SETTINGS_Wechat_Switch_Cancel">If closed, it cannot receive WeChat push. Unbinding it by unfollowing \“加菲狗官微服务\”.</string>
     <string name="SETTINGS_Wechat_Switch_Open">Please focus on the WeChat account \"加菲狗官微服务\" and bind, after the success of the old WeChat account will no longer receive the message push</string>
     <string name="SETTING_DIRECTION">Video direction</string>
@@ -652,6 +701,7 @@
     <string name="TUE_1">Tue</string>
     <string name="TUE_2">Tue</string>
     <string name="TUE_Hisvideo_Timeselector">Tue</string>
+    <string name="TURN_ON_HOTSPOT_GUIDE">Please \"Connect\", then turn on hot spotson system \"Settings\"</string>
     <string name="TURN_ON_PROTECTION">When Protection is on, user will be notified when motion detected in the set time period.</string>
     <string name="Tap0_AlreadyEmailed">Already emailed to</string>
     <string name="Tap0_Authorizationfailed">Authorization fail, please try again.</string>
@@ -1053,6 +1103,7 @@
     <string name="is_creating">Adding</string>
     <string name="is_logoutting">Logout</string>
     <string name="not_found_the_album_application">Album application not found</string>
+    <string name="open_night">Only open at night</string>
     <string name="pb_request">Loading</string>
     <string name="permission_auth">Please turn \"%s\" permission in the Android system settings, allowing you to normal use</string>
     <string name="photo">Photos</string>
