--- a/app/src/main/res/values-zh-rCN/strings.xml
+++ b/app/src/main/res/values-zh-rCN/strings.xml
@@ -26,6 +26,7 @@
     <string name="ALERTS">警报声</string>
     <string name="ALIAS">昵称</string>
     <string name="ALLDAY">全天</string>
+    <string name="ALLDAY_OPEN">全天开启</string>
     <string name="ALTER">修改</string>
     <string name="ANEW_SEND">重新发送</string>
     <string name="AT_HOME">回家模式</string>
@@ -35,7 +36,7 @@
     <string name="Add_Device_Scan_QR">扫码添加</string>
     <string name="Added_successfully">绑定成功</string>
     <string name="Alarm_WeChat">微信接收报警消息</string>
-    <string name="Alarm_WeChat_NoBindTips">使用此功能需要绑定手机/邮箱</string>
+    <string name="Alarm_WeChat_NoBindTips">使用此功能需要绑定手机</string>
     <string name="Apr">4月</string>
     <string name="Aug">8月</string>
     <string name="BACK">返回</string>
@@ -52,6 +53,7 @@
     <string name="Button_Sure">确认</string>
     <string name="Button_Yes">是</string>
     <string name="CALL_CAMERA_NAME">智能门铃</string>
+    <string name="CALL_SUCCESS_OPEN_SAVE">按下设备呼叫键呼叫成功后即开启／关闭省电模式</string>
     <string name="CAMERA">摄像头</string>
     <string name="CANCEL">取消</string>
     <string name="CARRY_ON">继续</string>
@@ -132,6 +134,7 @@
     <string name="DEVICE_OFFLINE5">请给设备配置WiFi进行连接。</string>
     <string name="DEVICE_OFFLINE6">无可用WiFi</string>
     <string name="DEVICE_OFFLINE7">请直连设备热点。</string>
+    <string name="DEVICE_SHARE_LIMIT_TIPS">分享人数已达上限</string>
     <string name="DEVICE_UPGRADE">设备软件升级</string>
     <string name="DEVICE_UPGRADE_TIPS">设备软件版本较低，请重新绑定设备进行升级</string>
     <string name="DEVICE_WIFI_ONLINE">WiFi在线</string>
@@ -214,6 +217,14 @@
     <string name="EMAIL_RESET_PWD">已发送邮件到%s，请点击邮箱内的链接重置密码</string>
     <string name="EMAIL_SIGNUP">邮箱注册</string>
     <string name="END_TALKBACK">对讲已结束</string>
+    <string name="ENERGY_SAVE_CALL">请按下呼叫键</string>
+    <string name="ENERGY_SAVE_HELP">帮助</string>
+    <string name="ENERGY_SAVE_MODE">省电模式</string>
+    <string name="ENERGY_SAVE_MODE_Description">开启后可接收门铃消息，但不可使用查看直播、录像、安全防护功能。若设置为“只在夜间开启”，则只在22:00到8:00间生效。</string>
+    <string name="ENERGY_SAVE_MODE_ON">已开启省电模式</string>
+    <string name="ENERGY_SAVE_MODE_ON_OFF">在省电模式页，选择开启/关闭</string>
+    <string name="ENERGY_SAVE_MODE_POP">请按下设备呼叫键，否则无法立刻生效。</string>
+    <string name="ENERGY_SAVE_NOTE">注：表示未生效</string>
     <string name="ENTER_CODE">验证码</string>
     <string name="ENTER_PWD">再次输入新密码</string>
     <string name="ENTER_PWD_1">输入密码</string>
@@ -263,6 +274,10 @@
     <string name="H5_Panoramic">全景</string>
     <string name="H5_VR_mode">VR模式</string>
     <string name="HOME">主页</string>
+    <string name="HOTSPOTS_CONNECT_TIMEOUT_TIPS">无法连接到热点</string>
+    <string name="HOTSPOT_NAME">热点: %s</string>
+    <string name="HOTSPOT_PASSWORD">请输入热点密码</string>
+    <string name="HOTSPOT_PASSWORD_ERROR">密码至少8个字符</string>
     <string name="HOUR">时</string>
     <string name="HOURS">全天提示</string>
     <string name="HZ_NTSC_PAL">开启NTSC</string>
@@ -303,7 +318,36 @@
     <string name="LIGTH_LABEL_1_2">蓝色常亮，3G/4G在线</string>
     <string name="LIGTH_LABEL_2_1">闪烁，电量较低</string>
     <string name="LIGTH_LABEL_2_2">蓝色常亮，已正常通电</string>
+    <string name="LIVE_ACCOUNT">%s 账号</string>
+    <string name="LIVE_ACCOUNT_BIND_TIPS">请先绑定账号</string>
+    <string name="LIVE_ACCOUNT_UNBOUND">未绑定</string>
+    <string name="LIVE_ADDRESS_EXPIRED">直播地址已失效</string>
+    <string name="LIVE_CHANNEL_CREATING_LOADING">正在创建&#8230;</string>
+    <string name="LIVE_CREATE_BUTTON">创建直播</string>
+    <string name="LIVE_CREATE_FAIL_TIPS">创建失败</string>
+    <string name="LIVE_CREATE_TIPS">请先创建直播</string>
+    <string name="LIVE_CREATING">正在创建%s直播&#8230;</string>
+    <string name="LIVE_CURRENT_TEXT">当前直播</string>
     <string name="LIVE_DATA">非WiFi网络，请注意流量消耗</string>
+    <string name="LIVE_DETAIL_ADD_END_TIME">添加结束时间</string>
+    <string name="LIVE_DETAIL_DEFAULT_CONTENT">我正在使用Unicam720°全景摄像机进行直播</string>
+    <string name="LIVE_DETAIL_DEL_END_TIME">删除结束时间</string>
+    <string name="LIVE_DETAIL_DESCRIPTION">直播描述</string>
+    <string name="LIVE_DETAIL_TITLE">直播标题</string>
+    <string name="LIVE_FAILED">因地址或网络问题，无法直播</string>
+    <string name="LIVE_LANMODE_POP">直连时不支持直播，是否切换至“连接WiFi”或“手机热点”？</string>
+    <string name="LIVE_NOT_OPENED_POP">YouTube账号 %s 尚未开通频道，无法直播，请先开通后重试</string>
+    <string name="LIVE_OPENING">正在开启直播&#8230;</string>
+    <string name="LIVE_PLATFORM_FACEBOOK">Facebook</string>
+    <string name="LIVE_PLATFORM_WEIBO">新浪微博</string>
+    <string name="LIVE_PLATFORM_YOUTUBE">YouTube</string>
+    <string name="LIVE_RTMP_HINT">rtmp://</string>
+    <string name="LIVE_SELECT_PLATFORM">选择直播平台</string>
+    <string name="LIVE_SLOW_CONNECTION">网速较慢，无法直播，请切换码率，或在更好的网络环境下重试。</string>
+    <string name="LIVE_STOP_POP">停止后，直播地址将失效，是否停止？</string>
+    <string name="LIVE_TESTING">正在测试直播网速&#8230;</string>
+    <string name="LIVE_TIME_ERROR_TIPS">开始时间必须小于结束时间</string>
+    <string name="LIVE_UNBIND_ACCOUNT">是否解除%s账号绑定？</string>
     <string name="LOADING">加载中&#8230;</string>
     <string name="LOCAL_NOTIFICATION_AndroidMSG">请在手机设置－通知页，找到“%s”，开启“允许通知”</string>
     <string name="LOCATION">位置名称：</string>
@@ -509,6 +553,10 @@
     <string name="RE_ADD_BUTTONG">重新添加</string>
     <string name="RE_ADD_LABEL">设备软件更新完成</string>
     <string name="RIGN_SUC">注册成功</string>
+    <string name="RTMP_EMPTY_TIPS">地址不能为空</string>
+    <string name="RTMP_ERROR_TIPS">请填正确地址</string>
+    <string name="RTMP_SERVER_URL">推流地址:</string>
+    <string name="RTMP_STREAM_KEY">密钥:</string>
     <string name="Record_Descript">开启后，查看实时监控将生成录像</string>
     <string name="Record_Operate">录像中不能进行其他操作</string>
     <string name="Record_Video">查看时录像</string>
@@ -558,6 +606,7 @@
     <string name="SETTING">正在设置&#8230;</string>
     <string name="SETTINGS">设置</string>
     <string name="SETTINGS_1">功能设置</string>
+    <string name="SETTINGS_MOBILE_HOTSPOT">手机热点</string>
     <string name="SETTINGS_Wechat_Switch_Cancel">关闭将无法接收微信推送。想取消绑定请前往微信取消关注“加菲狗官微服务”公众号。</string>
     <string name="SETTINGS_Wechat_Switch_Open">请在新的微信号上关注“加菲狗官微服务”并绑定，成功后旧的微信号将不再接收消息推送</string>
     <string name="SETTING_DIRECTION">视频方向</string>
@@ -652,6 +701,7 @@
     <string name="TUE_1">每周二</string>
     <string name="TUE_2">二</string>
     <string name="TUE_Hisvideo_Timeselector">周二</string>
+    <string name="TURN_ON_HOTSPOT_GUIDE">请先“连接”，再前往系统“设置”开启热点</string>
     <string name="TURN_ON_PROTECTION">开启后，报警时间段内侦测到异常，将发送消息通知</string>
     <string name="Tap0_AlreadyEmailed">已发送邮件到</string>
     <string name="Tap0_Authorizationfailed">授权失败，请稍后再试</string>
@@ -1045,7 +1095,7 @@
     <string name="getting">获取中&#8230;</string>
     <string name="has_copy">已复制</string>
     <string name="has_not_sdcard">未发现Micro SD卡</string>
-    <string name="help_url">https://%1$s:8081/helps/zh-rCN%2$s.html</string>
+    <string name="help_url">https://%1$s:8081/helps/zh&#8211;rCN%2$s.html</string>
     <string name="infrared_night_vision">红外夜视</string>
     <string name="infrared_night_vision_Descript">开启红外夜视可在光线较暗的环境下得到清晰的视频画面</string>
     <string name="isStorageLow">Micro SD卡存储空间不足，无法下载。</string>
@@ -1053,6 +1103,7 @@
     <string name="is_creating">正在保存</string>
     <string name="is_logoutting">正在退出</string>
     <string name="not_found_the_album_application">没有发现相册应用</string>
+    <string name="open_night">只在夜间开启</string>
     <string name="pb_request">正在获取</string>
     <string name="permission_auth">请在Android系统设置中开启“%s”访问权限，以方便您的正常使用</string>
     <string name="photo">相册</string>
